@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-03-11 Tue 18:36 -->
+<!-- 2025-04-01 Tue 14:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-03-11 18:35:58</i></td>
+<td class="org-left"><i>2025-04-01 14:51:49</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-03-11 18:35:59</i></td>
+<td class="org-left"><i>2025-04-01 14:51:50</i></td>
 </tr>
 </tbody>
 </table>
@@ -388,6 +388,7 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>mandelbrot_minOrbit</li>
 <li>mandeldragon.cpp</li>
 <li>mandeldragon_orbits.cpp</li>
+<li>ikeda_attractor.cpp</li>
 </ul></li>
 <li>Updated
 <ul class="org-ul">
