@@ -118,6 +118,7 @@ Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.
       - mandelbrot_minOrbit
       - mandeldragon.cpp 
       - mandeldragon_orbits.cpp 
+      - ikeda_attractor.cpp
     - Updated
       - newton_z6.cpp: Fixed non-const trig functions for MSVC
       - phoenix.cpp, phoenixD.cpp, phoenixI.cpp: Added OpenMP 2.0 support
